--- a/src/app/auth/containers/register/register.component.html
+++ b/src/app/auth/containers/register/register.component.html
@@ -25,8 +25,9 @@
                 name="full_name"
                 required
                 aria-describedby="full_name"
+                placeholder="{{ 'placeholder.input-fullname' | translate }}"
                 type="email"
-                class="form-control form-control-lg"
+                class="form-control"
                 required
               />
               <small
@@ -51,9 +52,10 @@
                 ngModel
                 #phone="ngModel"
                 name="phone"
+                placeholder="{{ 'placeholder.input-phone' | translate }}"
                 minlength="10"
                 aria-describedby="phone"
-                class="form-control form-control-lg"
+                class="form-control"
                 id="phone"
                 required
               />
@@ -78,8 +80,9 @@
                 ngModel
                 #email="ngModel"
                 name="email"
-                class="form-control form-control-lg"
+                class="form-control"
                 aria-describedby="email"
+                placeholder="{{ 'placeholder.input-email' | translate }}"
                 type="email"
                 required
               />
@@ -101,19 +104,17 @@
             <div class="col-9">
               <div class="d-flex position-relative">
                 <input
-                  class="form-control form-control-lg"
+                  class="form-control"
                   ngModel
                   #password="ngModel"
                   name="password"
-                  type="text"
+                  type="password"
+                  placeholder="{{ 'placeholder.input-password' | translate }}"
                   aria-describedby="password"
                   required
                   style="padding-right: 30px;"
                 />
-                <div
-                  class="d-flex form-control-lg position-absolute"
-                  style="right: 0;"
-                >
+                <div class="d-flex icon position-absolute" style="right: 0;">
                   <i class="bi bi-eye m-auto"></i>
                 </div>
               </div>
@@ -139,19 +140,19 @@
             <div class="col-9">
               <div class="d-flex position-relative">
                 <input
-                  class="form-control form-control-lg"
+                  class="form-control"
                   ngModel
                   #passwordconfirm="ngModel"
                   name="passwordconfirm"
                   required
                   aria-describedby="passwordconfirm"
-                  type="text"
+                  type="password"
+                  placeholder="{{
+                    'placeholder.input-password-confirm' | translate
+                  }}"
                   style="padding-right: 30px;"
                 />
-                <div
-                  class="d-flex form-control-lg position-absolute"
-                  style="right: 0;"
-                >
+                <div class="d-flex icon position-absolute" style="right: 0;">
                   <i class="bi bi-eye m-auto"></i>
                 </div>
               </div>
