--- a/src/app/auth/containers/register/register.component.scss
+++ b/src/app/auth/containers/register/register.component.scss
@@ -34,3 +34,23 @@
 a {
   text-decoration: none;
 }
+.form-control {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.icon {
+  margin-top: 12px;
+  font-size: 18px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+input:focus,
+textarea:focus,
+select:focus {
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  border: 1px solid #4d0a95;
+  outline-width: 0;
+  font-weight: 400;
+}
