--- a/src/app/coupons-manage/components/coupons-add/coupons-add.component.scss
+++ b/src/app/coupons-manage/components/coupons-add/coupons-add.component.scss
@@ -1,4 +1,16 @@
-.form-control {
-  padding-top: 5px;
-  padding-bottom: 5px;
+.input-customize {
+  padding: 8px 15px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  font-weight: 300;
+}
+input:focus,
+textarea:focus,
+select:focus {
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  border: 1px solid #4d0a95;
+  outline-width: 0;
+  font-weight: 400;
 }
