--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <!-- dashboard -->
   <a
     routerLink="/dashboard"
-    routerLinkActive="list-item-active"
+    routerLinkActive=" list-item-active"
     class="list-group-item list-group-item-action d-flex"
     aria-current="true"
   >
@@ -26,7 +26,7 @@
       <a
         routerLink="/employee"
         routerLinkActive="list-item-active"
-        class="list-group-item list-group-item-action"
+        class="list-group-item list-group-item-action px-5"
         style="background-color: black;"
       >
         {{ 'user.employee' | translate }}
@@ -34,7 +34,7 @@
       <a
         routerLink="/customer"
         routerLinkActive="list-item-active"
-        class="list-group-item list-group-item-action"
+        class="list-group-item list-group-item-action px-5"
         style="background-color: black;"
       >
         {{ 'user.customer' | translate }}
@@ -51,7 +51,8 @@
       aria-controls="configuration"
     >
       <mat-icon>settings</mat-icon>
-      {{ 'product.product' | translate }}
+
+      {{ 'product.product-configuration' | translate }}
     </div>
 
     <div id="configuration" class="accordion-collapse collapse">
@@ -91,7 +92,7 @@
       aria-controls="product"
     >
       <mat-icon>phone_iphone</mat-icon>
-      {{ 'product.product-configuration' | translate }}
+      {{ 'product.product' | translate }}
     </div>
 
     <div id="product" class="accordion-collapse collapse">
