--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -11,6 +11,7 @@ a {
 }
 
 .list-group-item {
+  align-items: center;
   font-size: 15px;
   color: #94a3b8 !important;
   background-color: #0f172a;
@@ -21,7 +22,7 @@ a {
 }
 .list-item-active {
   color: white !important;
-  background-color: #2c3344 !important;
+  background-color: #002d95 !important;
 }
 .collapsed {
   color: #94a3b8 !important;
