--- a/src/app/product-manage/components/product-add/product-add.component.scss
+++ b/src/app/product-manage/components/product-add/product-add.component.scss
@@ -1,27 +1,5 @@
-body {
-  color: #000;
-  height: 100%;
-}
-.card {
-  padding: 30px 40px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  border: none !important;
-  box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
-}
-.blue-text {
-  color: #00bcd4;
-}
-.form-control-label {
-  margin-bottom: 0;
-}
-input,
-textarea,
-select,
-button,
-select {
+.input-customize {
   padding: 8px 15px;
-  border-radius: 5px !important;
   margin: 5px 0px;
   box-sizing: border-box;
   border: 1px solid #ccc;
@@ -33,26 +11,7 @@ select:focus {
   -moz-box-shadow: none !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
-  border: 1px solid #00bcd4;
+  border: 1px solid #4d0a95;
   outline-width: 0;
   font-weight: 400;
-}
-.btn-block {
-  text-transform: uppercase;
-  font-size: 15px !important;
-  font-weight: 400;
-  height: 43px;
-  cursor: pointer;
-}
-.btn-block:hover {
-  color: #fff !important;
-}
-button:focus {
-  -moz-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  outline-width: 0;
-}
-.icon :hover {
-  background-color: #ccc;
 }
