--- a/src/app/warehouse-manage/containers/receipts-add/receipts-add.component.html
+++ b/src/app/warehouse-manage/containers/receipts-add/receipts-add.component.html
@@ -5,149 +5,194 @@
 </div>
 
 <div class="container-fluid p-3">
-  <div class="bg-white border">
-    <div class="row pt-4 pb-4 mx-auto">
-      <form id="addCouponsForm" #addCouponsForm="ngForm">
-        <div class="row justify-content-between">
-          <!-- code -->
-          <div class="form-group row mb-4">
-            <label class="col-3 m-auto col-form-label text-end">
-              {{ 'coupons.code' | translate }}
-            </label>
-            <div class="col-9">
-              <input
-                ngModel
-                #code="ngModel"
-                name="code"
-                class="form-control"
-                placeholder="{{ 'placeholder.input_code' | translate }}"
-                type="text"
-                required
-              />
-              <small
-                id="codeHid"
-                class="form-text text-muted"
-                *ngIf="!code?.valid && (code?.dirty || code?.touched)"
-              >
-                {{ 'notification.invalid-coupons' | translate }}
-              </small>
-            </div>
-          </div>
-          <!-- start date -- end date -->
-          <div class="form-group row mb-4">
-            <label class="col-3 m-auto col-form-label text-end">
-              {{ 'coupons.date' | translate }}
-            </label>
-            <div class="col-9">
-              <div class="row">
-                <div class="col-6">
-                  <input
-                    ngModel
-                    #code="ngModel"
-                    name="start_date"
-                    class="form-control"
-                    type="date"
-                    required
-                  />
-                  <small
-                    id="codeHid"
-                    class="form-text text-muted"
-                    *ngIf="!code?.valid && (code?.dirty || code?.touched)"
-                  >
-                    {{ 'notification.invalid-startdate' | translate }}
-                  </small>
-                </div>
+  <div class="row pb-4 mx-auto">
+    <div class="row">
+      <div class="col-sm-6">
+        <form id="FormData" #FormData="ngForm">
+          <div class="row justify-content-between">
+            <!-- supplierId -->
+            <div class="form-group row mb-4">
+              <label class="col-3 m-auto col-form-label text-end">
+                {{ 'user.supplier' | translate }}
+              </label>
+              <div class="col-9">
+                <select
+                  #supplierId="ngModel"
+                  required
+                  ngModel
+                  name="supplierId"
+                  class="form-select input-customize form-group"
+                >
+                  <option hidden value="" disabled selected>
+                    {{ 'placeholder.choose-supplier' | translate }}
+                  </option>
+                  <option *ngFor="let item of supplierList" [value]="item.id">
+                    {{ item.name }}
+                  </option>
+                </select>
 
-                <div class="col-6">
-                  <input
-                    ngModel
-                    #code="ngModel"
-                    name="end_date"
-                    class="form-control"
-                    type="date"
-                    required
-                  />
-                  <small
-                    id="codeHid"
-                    class="form-text text-muted"
-                    *ngIf="!code?.valid && (code?.dirty || code?.touched)"
-                  >
-                    {{ 'notification.invalid-enddate' | translate }}
-                  </small>
-                </div>
+                <small
+                  class="form-text text-muted"
+                  *ngIf="
+                    (supplierList?.value == '' &&
+                      (supplierId?.dirty || supplierId?.touched)) ||
+                    (!supplierId?.valid &&
+                      (supplierId?.dirty || supplierId?.touched))
+                  "
+                >
+                  {{ 'notification.invalid-supplier' | translate }}
+                </small>
               </div>
             </div>
-          </div>
+            <hr />
+            <!-- product -->
+            <div class="form-group row mb-4">
+              <label class="col-3 m-auto col-form-label text-end">
+                {{ 'product.product' | translate }}
+              </label>
+              <div class="col-9">
+                <select
+                  #productId="ngModel"
+                  required
+                  ngModel
+                  name="productId"
+                  class="form-select input-customize"
+                >
+                  <option hidden value="" disabled selected>
+                    {{ 'placeholder.choose-product' | translate }}
+                  </option>
+                  <option *ngFor="let item of productList" [value]="item.id">
+                    <span>
+                      {{ item?.name }} {{ item?.ram_option?.name }} ({{
+                        item?.color_option?.name
+                      }})
+                    </span>
+                  </option>
+                </select>
 
-          <!-- quantity -->
-          <div class="form-group row mb-4">
-            <label class="col-3 m-auto col-form-label text-end">
-              {{ 'product.quantity' | translate }}
-            </label>
-            <div class="col-9">
-              <input
-                ngModel
-                #quantity="ngModel"
-                name="quantity"
-                class="form-control"
-                placeholder="{{ 'placeholder.input_quantity' | translate }}"
-                type="text"
-                required
-              />
-              <small
-                class="form-text text-muted"
-                *ngIf="
-                  !quantity?.valid && (quantity?.dirty || quantity?.touched)
-                "
-              >
-                {{ 'notification.invalid-quantity' | translate }}
-              </small>
+                <small
+                  class="form-text text-muted"
+                  *ngIf="
+                    (productId?.value == '' &&
+                      (productId?.dirty || productId?.touched)) ||
+                    (!productId?.valid &&
+                      (productId?.dirty || productId?.touched))
+                  "
+                >
+                  {{ 'notification.invalid-product' | translate }}
+                </small>
+              </div>
             </div>
-          </div>
 
-          <!-- discount value -->
-          <div class="form-group row mb-4">
-            <label class="col-3 m-auto col-form-label text-end">
-              {{ 'coupons.discount-value' | translate }}
-            </label>
-            <div class="col-9">
-              <div class="input-group">
+            <!-- quantity -->
+            <div class="form-group row mb-4">
+              <label class="col-3 m-auto col-form-label text-end">
+                {{ 'product.quantity' | translate }}
+              </label>
+              <div class="col-9">
                 <input
                   ngModel
-                  #discount_value="ngModel"
-                  name="discount_value"
-                  class="form-control"
-                  placeholder="{{
-                    'placeholder.input_discount_value' | translate
-                  }}"
+                  #quantity="ngModel"
+                  name="quantity"
+                  class="form-control input-customize"
+                  placeholder="{{ 'placeholder.input-quantity' | translate }}"
                   type="text"
                   required
                 />
-                <span class="input-group-text">VNĐ</span>
+                <small
+                  class="form-text text-muted"
+                  *ngIf="
+                    !quantity?.valid && (quantity?.dirty || quantity?.touched)
+                  "
+                >
+                  {{ 'notification.invalid-quantity' | translate }}
+                </small>
               </div>
-              <small
-                id="codeHid"
-                class="form-text text-muted"
-                *ngIf="
-                  !discount_value?.valid &&
-                  (discount_value?.dirty || discount_value?.touched)
-                "
-              >
-                {{ 'notification.invalid-discount_value' | translate }}
-              </small>
             </div>
-          </div>
+            <!-- total price -->
+            <div class="form-group fs-3 row mb-4">
+              <label class="col-3 fw-bold m-auto col-form-label text-end">
+                {{ 'total-amount' | translate }}
+              </label>
+              <div class="col-9 d-flex" style="align-items: center;">
+                <span>50000000 (VNĐ)</span>
+              </div>
+            </div>
+            <!-- button -->
+            <div class="form-group row mb-4">
+              <div class="col-6">
+                <button class="btn btn-secondary form-control">
+                  Thêm sản phẩm
+                </button>
+              </div>
 
-          <div class="form-group row mb-4">
-            <div class="col-3"></div>
-            <div class="col-9">
-              <button class="btn btn-primary py-2 w-100" cdkFocusInitial>
-                {{ 'save' | translate }}
-              </button>
+              <div class="col-6">
+                <button class="btn btn-danger form-control">
+                  Xóa sản phẩm
+                </button>
+              </div>
             </div>
           </div>
-        </div>
-      </form>
+        </form>
+      </div>
+      <div class="col-sm-6 mb-5">
+        <section class="example-container border" tabindex="0">
+          <table mat-table [dataSource]="dataSource">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef>{{ 'id' | translate }}</th>
+              <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="product">
+              <th mat-header-cell *matHeaderCellDef>
+                {{ 'product.product' | translate }}
+              </th>
+              <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="quantity">
+              <th mat-header-cell *matHeaderCellDef>
+                {{ 'product.quantity' | translate }}
+              </th>
+              <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+            </ng-container>
+            <ng-container matColumnDef="price">
+              <th mat-header-cell *matHeaderCellDef>
+                {{ 'product.price' | translate }}
+              </th>
+              <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="total-price">
+              <th mat-header-cell *matHeaderCellDef>
+                {{ 'total-price' | translate }}
+              </th>
+              <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef>
+                {{ 'delete' | translate }}
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <mat-icon>delete</mat-icon>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+        </section>
+      </div>
+    </div>
+
+    <div class="form-group row mb-4">
+      <div class="col-sm-8"></div>
+      <div class="col-sm-4">
+        <button class="btn btn-primary py-2 w-100" cdkFocusInitial>
+          {{ 'save' | translate }}
+        </button>
+      </div>
     </div>
   </div>
 </div>
