--- a/src/app/warehouse-manage/containers/receipts-add/receipts-add.component.scss
+++ b/src/app/warehouse-manage/containers/receipts-add/receipts-add.component.scss
@@ -1,4 +1,25 @@
-.form-control {
-  padding-top: 10px;
-  padding-bottom: 10px;
+.input-customize {
+  padding: 8px 15px;
+  margin: 5px 0px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  font-weight: 300;
+}
+input:focus,
+textarea:focus,
+select:focus {
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  border: 1px solid #4d0a95;
+  outline-width: 0;
+  font-weight: 400;
+}
+.example-container {
+  height: 400px;
+  overflow: auto;
+}
+
+table {
+  width: 100%;
 }
